# record-to-text-tauri

./: LICENSE  README.md  package-lock.json  package.json  requirements.txt  transcribe_local.py
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
